--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/main/main.js" type="text/javascript"></script>
   </body>
 </html>
