--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="app"></div>
     <script src="js/main/main.js" type="text/javascript"></script>
+    <script>localStorage.setItem("day8.re-frame-10x.show-panel","\"false\"");</script>
   </body>
 </html>
